@@ -11,7 +11,7 @@
 <li><a href="#building">2. Building</a></li>
 <ul>
 <li><a href="#driver_signing">2.1 Driver Signing</a></li>
-<li><a href="#visual_studio_2010_support">2.2 Visual Studio 2010 Support</a></li>
+<li><a href="#visual_studio_2012_support">2.2 Visual Studio 2012 Support</a></li>
 <li><a href="#mingw_support">2.3 MinGW Support</a></li>
 </ul>
 <li><a href="#installing">3. Installing</a></li>
@@ -112,7 +112,7 @@ This will build the following files and place them in the
 </ol>
 <i>NOTE:</i> The <tt>WinDivert.dll</tt> and <tt>WinDivert.lib</tt> files
 are only compatible with programs compiled with the WDDK compiler.
-See below for Visual Studio 2010 and MinGW support.
+See below for Visual Studio 2012 and MinGW support.
 </p>
 
 <a name="driver_signing"><h3>2.1 Driver Signing</h3></a>
@@ -125,9 +125,9 @@ See <a href="http://msdn.microsoft.com/en-us/windows/hardware/gg487317.aspx">Dri
 for more information.
 </p>
 
-<a name="visual_studio_2010_support"><h3>2.2 Visual Studio 2010 Support</h3></a>
+<a name="visual_studio_2012_support"><h3>2.2 Visual Studio 2012 Support</h3></a>
 <p>
-To build the WinDivert package for Visual Studio 2010:
+To build the WinDivert package for Visual Studio 2012:
 <ol>
 <li> First build the driver by running <tt>wddk-build.bat</tt> as per the
 instructions above.</li>
@@ -136,7 +136,7 @@ instructions above.</li>
 <pre>
 msvc-build.bat
 </pre>
-This will build Visual Studio 2010 compatible files and place them in the
+This will build Visual Studio 2012 compatible files and place them in the
 <tt>install\MSVC</tt> subdirectory.</li>
 </ol>
 </p>
